# plottwist

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  all_templates_demo.py  basic.py  quickstart.py
src/: __main__.py  core.py  health.py  utils.py
src/plottwist/: __init__.py  cli.py  models.py  report.py  templates.py
src/plottwist/generator/: __init__.py  dialogue.py  narrator.py
src/plottwist/story/: __init__.py  characters.py  choices.py  engine.py  world.py
tests/: test_benchmark.py  test_characters.py  test_choices.py  test_cli.py  test_core.py  test_engine.py  test_integration.py  test_models.py  test_templates.py  test_world.py
